[package]
name = "samples"
version = "0.1.0"
authors = ["Rob Tsuk <rob@tsuk.com>"]
edition = "2018"

[features]
default = [ "feather_m4" ]

[dependencies]
cortex-m = "~0.6"
embedded-hal = "0.2.3"
feather_m4 = { version = "0.7.0", features = [ "unproven", "usb", "rt"], optional = true }

[dev-dependencies]
panic-halt = "0.2"
panic-semihosting = "0.5"
cortex-m-semihosting = "0.3"
smart-leds = "0.3.0"
ws2812-timer-delay = "0.3.0"
